--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "firebase": "^4.9.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.2",
+    "rxjs": "5.5.4",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "moment": "^2.22.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
