--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.6",
     "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
     "cordova-plugin-browsertab": "^0.2.0",
     "cordova-plugin-buildinfo": "^2.0.1",
     "cordova-plugin-compat": "^1.2.0",
@@ -38,12 +39,12 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-universal-links-plugin": "git+https://github.com/walteram/cordova-universal-links-plugin.git",
     "firebase": "^4.9.1",
-    "ionic-angular": "3.9.2",
+    "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
+    "moment": "^2.22.0",
     "rxjs": "5.5.4",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "moment": "^2.22.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
@@ -64,7 +65,8 @@
       "cordova-universal-links-plugin": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
